# rust-api-boilerplate

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  data.json  docker-compose.yml
migrations/: 20240630145004_authors.down.sql  20240630145004_authors.up.sql  20240630145030_content.down.sql  20240630145030_content.up.sql  20240630145032_tags.up.sql  20240630145036_content_tags.down.sql  20240630145036_content_tags.up.sql
src/: config.rs  main.rs
src/application/: author_service.rs  content_service.rs  mod.rs
src/domain/: author.rs  content.rs  mod.rs
src/infrastructure/: author_repository.rs  content_repository.rs  mod.rs
src/presentation/handler/: author_handler.rs  content_handler.rs  mod.rs
src/presentation/routes/: author_routes.rs  content_routes.rs  mod.rs
src/scripts/: seed.rs
