[package]
name = "rust_api_boilerplate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seed"
path = "src/scripts/seed.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = [
  "runtime-async-std-native-tls",
  "postgres",
  "chrono",
  "uuid",
] }
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }

dotenv = "0.15.0"
clap = { version = "4.1.8", features = ["derive", "env"] }
